--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="hero">
-        <div class="nav-bar">
-            <h1>Header Logo</h1>
-            <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
-            </ul>
+    <div class="section-1">
+        <div class="hero">
+            <div class="nav-bar">
+                <h1>Header Logo</h1>
+                <ul>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
+            </div>
+            <div class="main-text">
+                <h1>This website is <br>awesome</br></h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
+                <input type="button" value="Sign Up" class="btn">
+                <img src="./images/landing.jpg" alt="background image">
+            </div>
         </div>
     </div>
 </body>
