--- a/index.html
+++ b/index.html
@@ -26,5 +26,32 @@
             </div>
         </div>
     </div>
+
+    <div class="section-2">
+        <h1>Some random information.</h1>
+        <div class="imgs">
+            <div class="image1">
+                <img src="./images/img1.jpg" alt="image1" style="width: 150px; height: 150px;">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image2">
+                <img src="./images/img2.jpg" alt="image2" style="width: 150px; height: 150px;">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image3">
+                <img src="./images/img3.jpg" alt="image3" style="width: 150px; height: 150px;">
+            <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="image4">
+                <img src="./images/img4.jpg" alt="image4" style="width: 150px; height: 150px;">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section-3">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <span>-Thor, God of Thunder</span>
+    </div>
 </body>
 </html>
