Section-4 and footer added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </ul>
             </div>
             <div class="main-text">
-                <h1>This website is <br>awesome</br></h1>
+                <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
                 <input type="button" value="Sign Up" class="btn">
                 <img src="./images/landing.jpg" alt="background image">
@@ -52,6 +52,18 @@
     <div class="section-3">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <span>-Thor, God of Thunder</span>
+    </div>
+
+    <div class="section-4">
+        <div class="c2a">
+        <h3><span>Call to action! It's time!</span><br>
+        Sign up for our product by clicking that button right over there!</h3>
+        </div>
+        <input type="button" value="Sign up" class="btn">
+    </div>
+
+    <div class="footer">
+        <p>Copyright &copy; The Odin Project 2021</p>
     </div>
 </body>
 </html>
