Final minor changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 </ul>
             </div>
             <div class="main-text">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
+                <p><span>This website is awesome</span><br>
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
                 <input type="button" value="Sign Up" class="btn">
                 <img src="./images/landing.jpg" alt="background image">
             </div>
